--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
-version: '2'
 services:
   php:
-    image: yiisoftware/yii2-php:7.4-apache
+    build: .
     volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+      - ./:/var/www/html:delegated
     ports:
       - '8000:80'
-  
+    depends_on:
+      - db
+  db:
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: limesurvey
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./db/limesurvey.sql:/docker-entrypoint-initdb.d/limesurvey.sql
